...
      Button {
        model.addSyncUpButtonTapped()
      } label: {
        Image(systemName: "plus")
      }
    }
    .navigationTitle("Daily Sync-ups")
    .sheet(item: $model.addSyncUp) { syncUpFormModel in
      NavigationStack {
        SyncUpFormView(model: syncUpFormModel)
          .navigationTitle("New sync-up")
          .toolbar {
            ToolbarItem(placement: .cancellationAction) {
              Button("Dismiss") {
                model.dismissAddSyncUpButtonTapped()
              }
            }
            ToolbarItem(placement: .confirmationAction) {
              Button("Add") {
                model.confirmAddSyncUpButtonTapped()
              }
            }
          }
      }
    }
...
extension SharedReaderKey where Self == FileStorageKey<IdentifiedArrayOf<SyncUp>>.Default {
  static var syncUps: Self {
    let url = URL.documentsDirectory.appending(component: "sync-ups.json")
    print(url)
    return Self[
      .fileStorage(url),
      default: isTesting || ProcessInfo.processInfo.environment["UI_TEST_NAME"] != nil
        ? []
        : [
          .mock,
          .engineeringMock,
          .designMock,
        ]
...
